--- a/phone-number/package.json
+++ b/phone-number/package.json
@@ -26,7 +26,10 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
+    "prettier": "^2.7.1",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
   }
