--- a/vue-charts/package.json
+++ b/vue-charts/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.2",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
